# mcp_hackathon

./: .gitignore  README.md  app.py  llm_token_test.py  main.py  pyproject.toml  requirements.txt  result.txt
experiment/: gradio_request_demo.py  gradio_server_demo.py  requirements.txt
mcp-server/: main.py
src/: browser_use_exp.py  gmap.py  mcp.py  tax.py
